--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.makeramen:roundedimageview:2.0.1'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
 
 }
