--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,11 +71,7 @@
         </activity>
         <activity
             android:name=".activities.ProfileActivity"
-            android:label="@string/title_activity_profile"
-            android:parentActivityName=".activities.TimelineActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.codepath.apps.mysimpletweets.activities.TimelineActivity" />
+            android:label="@string/title_activity_profile">
         </activity>
     </application>
 
